--- a/templates/partida/jocEntrenament.html.twig
+++ b/templates/partida/jocEntrenament.html.twig
@@ -124,7 +124,7 @@
             grup[2] = grupObj;
         });
 
-        console.log(temesGrup);
+        //console.log(temesGrup);
 
         /* GET PREGUNTES ENTRENAMENT */
 
@@ -144,7 +144,7 @@
                 temesErrors[idx] = 0;
             });
 
-            console.log(temes);
+            //console.log(temes);
 
             var url = "{{getPreguntesUrl}}";
 
@@ -178,7 +178,7 @@
 
                 }
 
-                console.log(preguntes.ids);
+                //console.log(preguntes.ids);
 
                 pujarPartida();
 
